# my_rUBot_rosbot

./: .gitignore  README.md
.devcontainer/: devcontainer.json
Documentation/: 01_rosbot_setup.md
Documentation/Files/ROSbot_install/: install_rosbot_native.sh
docker/: .env  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
docker_jazzy/: Dockerfile  UB_Custom_Docker_container_jazzy.md  cyclonedds_pc.xml  docker-compose.yaml  entrypoint_pc.sh
src/my_rosbot_bringup/: package.xml  setup.cfg  setup.py
src/my_rosbot_bringup/config/: gz_bridges.yaml
src/my_rosbot_bringup/launch/: bringup_camera_sw.launch.py  bringup_custom_sw.launch.py  bringup_sw.launch.py
src/my_rosbot_bringup/urdf/: rosbot_xl_with_rgbd.urdf.xacro
src/my_rosbot_bringup/urdf/addons/: rgbd.gazebo.xacro
src/my_rosbot_control/: package.xml  setup.cfg  setup.py
src/my_rosbot_control/my_rosbot_control/: teleop_simple.py
